<resources>
    <string name="app_name">Battleship</string>
    <string name="logo">Battleships</string>
    <string name="start_game_button">Start New Game</string>
    <string name="easy_button">Easy</string>
    <string name="medium_button">Medium</string>
    <string name="hard_button">Hard</string>
    <string name="computer_turn_display">Computer\'s turn</string>
    <string name="human_turn_display">Your turn</string>
    <string name="sized">%d</string>
    <string name="letter">%c</string>
    <string name="number">%d</string>
    <string name="main_menu">main menu</string>
    <string name="replay">replay</string>
    <string name="highscore_button">High Scores</string>
    <string name="user_name">Username</string>
    <string name="name_col">Name</string>
    <string name="score_col">Score</string>
</resources>
